--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 .navOption {
     margin: 1%;
     text-align: center;
-    padding: 0.6rem;
 }
 
 .deselected-nav {
@@ -17,8 +16,7 @@
 }
 
 .selected-nav {
-    background-color: black ;
-    color: rgb(244, 241, 243) ;
+    background-color: rgb(223, 220, 222) ;
 }
 
 .newto-box {
@@ -36,6 +34,11 @@
     max-height: 100vh;
 }
 
+h1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+}
+
 h3{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
@@ -46,7 +49,22 @@ label {
     font-weight: 300;
 }
 
+.txtSmall-bold {
+    font-size: small;
+    font-weight: 700;
+}
+
 .fw400 {
+    font-weight: 400;
+}
+
+.text-right{
+    text-align: right;
+}
+
+.text-link {
+    color:rgb(6,69,173);
+    font-size: small;
     font-weight: 400;
 }
 
@@ -64,5 +82,13 @@ a {
 
 #homeMenu {
     text-align: right;
+    bottom: 0;
 }
 
+#navBar {
+    background-color:white;
+}
+
+#workSpace {
+    height: 95vh;
+}
