--- a/style.css
+++ b/style.css
@@ -8,15 +8,17 @@
 }
 
 .deselected-nav {
-    background-color: rgb(244, 241, 243) ;
+    background-color: whitesmoke ;
 }
-
-.nextPrenotationItem {
-    background-color: rgb(244, 241, 243) ;
-}
-
 .selected-nav {
-    background-color: rgb(223, 220, 222) ;
+    background-color: rgb(199, 199, 199) ;
+}
+
+.pendingPrenotationItem {
+    background-color: whitesmoke ;
+}
+.expiredPrenotationItem{
+    background-color: lemonchiffon;
 }
 
 .newto-box {
@@ -39,10 +41,16 @@ h1{
     font-weight: 400;
 }
 
+h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+}
+
 h3{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
 }
+
 
 label {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -51,7 +59,8 @@ label {
 
 .txtSmall-bold {
     font-size: small;
-    font-weight: 700;
+    color: black;
+    font-weight: 650;
 }
 
 .fw400 {
