--- a/style.css
+++ b/style.css
@@ -137,3 +137,25 @@ a {
     margin-top: 8vh;
     overflow-y: auto;
 }
+
+.dropdown{
+    position: relative;
+    display: inline-block;;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 2;
+    right: 0;
+    background-color: whitesmoke;
+}
+
+.btnDropdownItem {
+    margin: 0.2rem;
+}
+
+.btnDropdownItem:hover .btnDropdownItem{
+    background-color: rgb(239, 239, 239);
+}
+
